fix(chart): scrollbar hide

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -12,6 +12,11 @@
 // body
 body {
   font-family: 'Inter';
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 // Quasar Overwrites
